# luxnix

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .sops.yaml  CommonErrors.md  LxCheatsheet.md  README.md  README_hild.md  TABLE_OF_CONTENTS.md  ansible.cfg  deployment-guide.md  devenv.nix  devlog.md  endoreg-central-architecture.md  errorlog.json  example.json  flake.nix  gs-02-hardware.nix  luxnix.code-workspace  postgres-config-guide.md  postgres-documentation.md  postgres-gc10-declarative-setup-summary.md  postgres-lx-annotate-setup.md  pyproject.toml  result  roles-documentation.md  test_hash  topology.nix  vault_clients.yml
.github/: test_devenv.yml
administration/: .devenv.flake.nix  .gitignore  best-practices-env.md  best-practices-yaml.md  devenv.nix  hello.py  manage.py  postgres-cli.md  pyproject.toml
ansible/: README.md  ansible-cmdb-readme.md  site.yml
autoconf/: _host_configs.yml  _host_vars.yml  _roles.yml  group_vars.yml  host_configs.yml  host_configs_25-01-13.yml  host_configs_25-01-17.yml  roles.yml  (+5 more)
lx-administration/: .devenv.flake.nix  .gitignore  devenv.nix  luxnix.code-workspace  pyproject.toml
lx-administration/.devenv/: input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
lx-administration/.devenv/gc/: shell-3-link
lx-administration/lx_administration/: __init__.py
lx-administration/tests/ssh/: test_generate_key.py
utils/: .devenv.flake.nix  .gitignore  README.md  devenv.nix  hello.py  lx-base-identities.yaml  pyproject.toml
utils/lx_admin/: user_keygen.py
utils/lx_admin/bumpversion/: lx_django_template.py
utils/lx_admin/managers/: __init__.py  key_file_manager.py  sops_age_utils.py  sops_secret_manager copy 2.py  sops_secret_manager copy.py  sops_secret_manager.py  ssh_key_utils.py
utils/lx_admin/managers/helpers/: __init__.py  generate_key_pair.py  generate_sops_age_key.py
utils/lx_admin/utils/: __init__.py  secrets.py
utils/scripts/: create_secret_demo.py  generate_sops_from_keyfilemanager.py  init_identity.py  manage_sopsfile.py  manage_user.py
utils/tests/: test_key_file_manager.py  test_sops_secret_manager.py
(+504 files in other folders)
